--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:iVJ5dfcTUlBYQXEaBLoN62i0KQR60Hj8B6OSCYa31WI=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://bitterz.com/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -33,3 +33,7 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+GOOGLE_CAPTCHA_SECRET=6Lc6y1cUAAAAAMZBezP_3Sox03ZhnbgPNg2W5o-q
+GOOGLE_CAPTCHA_KEY=6Lc6y1cUAAAAAFAaNGQ9r8W_u0gaHy7ki2PP90lJ
+GOOGLE_CAPTCHA_VERIFY_LINK=https://www.google.com/recaptcha/api/siteverify
